added favicon and fixed title

--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Title</title>
+    <title>Renome</title>
     <link rel="stylesheet" href="RENOME-style.css">
     <link rel="stylesheet" href="tablet-CSS.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="phone.css" media="all and (max-width:480px)">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+    <link rel="icon" href="pictures/logo.png">
 </head>
 <body>
 <header>
@@ -545,7 +546,7 @@
                         </div>
                         <div class="message-area">
                             <label>
-                                <textarea>message</textarea>
+                                <textarea name="message" placeholder="Message"></textarea>
                             </label>
                         </div>
                         <div class="message-btn">
