added some modal details

--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
                         <span>$9</span><span class="font-gray">.95</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-dumpling.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Dumplings.jpg" alt="">
                     </div>
@@ -200,7 +200,7 @@
                         <span>$5</span><span class="font-gray">.70</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-French-onion-soup.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/French%20onion%20soup.jpg" alt="">
                     </div>
@@ -214,7 +214,7 @@
                         <span>$5</span><span class="font-gray">.80</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal -mini-chili-pretzels.web">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Mini%20chilli%20pretzels.jpg" alt="">
                     </div>
@@ -231,7 +231,7 @@
                 <div class="title">
                     <span>Entrees </span>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-salmon.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Atlantic%20Salmon.jpg" alt="">
                     </div>
@@ -245,7 +245,7 @@
                         <span>$7</span><span class="font-gray">.30</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-fish-tacos.jfif">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Fish%20tacos.jpg" alt="">
                     </div>
@@ -260,7 +260,7 @@
                         <span>$5</span><span class="font-gray">.45</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-sesame-tuna.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Sesame%20Tuna.jpg" alt="">
                     </div>
@@ -275,7 +275,7 @@
                         <span>$4</span><span class="font-gray">.60</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-chicken-parmesan.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Parmesan%20chicken.jpg" alt="">
                     </div>
@@ -292,11 +292,11 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-dishes-items">
+            <div class="menu-dishes-items" >
                 <div class="title">
                     <span>Main Course</span>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-Garlic-Butter-Scallops.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Seared%20scallops.jpg" alt="">
                     </div>
@@ -311,7 +311,7 @@
                         <span>$3</span><span class="font-gray">.80</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-poached-salmon.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Poached%20salmon.jpg" alt="">
                     </div>
@@ -326,7 +326,7 @@
                         <span>$9</span><span class="font-gray">.25</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-green-curry.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Green%20curry.jpg" alt="">
                     </div>
@@ -346,7 +346,7 @@
                 <div class="title">
                     <span>Salads</span>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-lobster.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Lobster%20salad.jpg" alt="">
                     </div>
@@ -362,7 +362,7 @@
                         <span>$6</span><span class="font-gray">.30</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-chicken-orange.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Chicken%20&%20orange%20salad.jpg" alt="">
                     </div>
@@ -377,7 +377,7 @@
                         <span>$8</span><span class="font-gray">.50</span>
                     </div>
                 </div>
-                <div class="menu-dishes-item">
+                <div class="menu-dishes-item" data-picture="pictures/modal-winter-salad.jpg">
                     <div class="menu-dishes-item-picture">
                         <img src="pictures/Winter%20salad.jpg" alt="">
                     </div>
