--- a/index.html
+++ b/index.html
@@ -519,38 +519,35 @@
                 <div class="message-title">
                     <span>WRITE A MESSAGE</span>
                 </div>
-                <form>
-                    <div class="form-container">
+                <form id="form_container">
+                    <div class="form-container" >
                         <div class="input-field">
                             <label>
-                                <input type="text" name="first-name" placeholder="First Name">
+                                <input type="text" name="firstname" placeholder="First Name" id="firstname">
                             </label>
                         </div>
                         <div class="input-field">
                             <label>
-                                <input type="text" name="last-name" placeholder="Last Name">
+                                <input type="text" name="lastname" placeholder="Last Name" id="lastname">
                             </label>
                         </div>
                         <div class="input-field">
                             <label>
-                                <input type="text" name="email" placeholder="Email">
+                                <input type="text" name="email" placeholder="Email" id="email">
                             </label>
                         </div>
                         <div class="message-selector">
                             <label>
-                                <select>
-                                    <option>subject</option>
-                                    <option>subject 1</option>
-                                </select>
+                                <input type="text" name="subject" placeholder="Subject" id="subject">
                             </label>
                         </div>
                         <div class="message-area">
                             <label>
-                                <textarea name="message" placeholder="Message"></textarea>
+                                <textarea name="message" placeholder="Message" id="message"></textarea>
                             </label>
                         </div>
                         <div class="message-btn">
-                            <button>SEND</button>
+                            <input type="submit" value="SEND" id="submit-btn">
                         </div>
                     </div>
                 </form>
@@ -628,6 +625,7 @@
 <script src="jquery-3.5.1.min.js">
 
 </script>
+<script src="jquery.validate.min.js"></script>
 <script src="script.js">
 
 </script>
