--- a/index.html
+++ b/index.html
@@ -6,12 +6,14 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Renome</title>
+    <link rel="stylesheet" href="jquery-ui.css">
     <link rel="stylesheet" href="RENOME-style.css">
     <link rel="stylesheet" href="tablet-CSS.css" media="all and (max-width:768px)">
     <link rel="stylesheet" href="phone.css" media="all and (max-width:480px)">
     <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
     <link rel="icon" href="pictures/logo.png">
+    <link rel="stylesheet" href="jquery.ptTimeSelect.css">
 </head>
 <body>
 <header>
@@ -64,7 +66,7 @@
                         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 576 512">
                             <path d="M528.12 301.319l47.273-208C578.806 78.301 567.391 64 551.99 64H159.208l-9.166-44.81C147.758 8.021 137.93 0 126.529 0H24C10.745 0 0 10.745 0 24v16c0 13.255 10.745 24 24 24h69.883l70.248 343.435C147.325 417.1 136 435.222 136 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-15.674-6.447-29.835-16.824-40h209.647C430.447 426.165 424 440.326 424 456c0 30.928 25.072 56 56 56s56-25.072 56-56c0-22.172-12.888-41.332-31.579-50.405l5.517-24.276c3.413-15.018-8.002-29.319-23.403-29.319H218.117l-6.545-32h293.145c11.206 0 20.92-7.754 23.403-18.681z"></path>
                         </svg>
-                        <span class="card_number">1</span>
+                        <span class="card_number">0</span>
                     </a>
                 </li>
 
@@ -105,7 +107,7 @@
             </div>
         </div>
     </section>
-    <section class="gallery" id="gallery" >
+    <section class="gallery" id="gallery">
         <div class="gallery-content">
             <div class="gallery-titles">
                 <h2 class="font-axis">gallery</h2>
@@ -133,7 +135,7 @@
             </div>
         </div>
     </section>
-    <section class="menu" >
+    <section class="menu">
         <div class="menu-content">
             <div class="menu-info">
                 <h2 class="font-axis ">menu</h2>
@@ -292,7 +294,7 @@
                     </div>
                 </div>
             </div>
-            <div class="menu-dishes-items" >
+            <div class="menu-dishes-items">
                 <div class="title">
                     <span>Main Course</span>
                 </div>
@@ -439,19 +441,15 @@
             <div class="make-reservation-content">
                 <div class="reservation-calendar">
                     <label>
-                        <span class="calendar"><img src="pictures/calendar%20icon.png" alt=""></span> <select
-                            name="calendar">
-                        <option>11/11/2019</option>
-                        <option>12/12/2019</option>
-                    </select>
+                        <span class="calendar"><img src="pictures/calendar%20icon.png" alt=""></span>
+                        <input type="text" name="calendar">
                     </label>
                 </div>
                 <div class="reservation-time">
                     <label>
-                        <span class="time"><img src="pictures/hours%20icon.png" alt=""></span> <select name="time">
-                        <option>12:00 PM</option>
-                        <option>13:00 PM</option>
-                    </select>
+                        <span class="time"><img src="pictures/hours%20icon.png" alt=""></span>
+                        <input type="text" name="time" autocomplete="off">
+
                     </label>
                 </div>
                 <div class="reservation-people-number">
@@ -459,7 +457,34 @@
                         <span class="people-number"><img src="pictures/people%20icon.png" alt=""></span> <select
                             name="people">
                         <option>2 People</option>
+                        <option>3 People</option>
                         <option>4 People</option>
+                        <option>5 People</option>
+                        <option>6 People</option>
+                        <option>7 People</option>
+                        <option>8 People</option>
+                        <option>9 People</option>
+                        <option>10 People</option>
+                        <option>11 People</option>
+                        <option>12 People</option>
+                        <option>13 People</option>
+                        <option>14 People</option>
+                        <option>15 People</option>
+                        <option>16 People</option>
+                        <option>17 People</option>
+                        <option>18 People</option>
+                        <option>19 People</option>
+                        <option>20 People</option>
+                        <option>21 People</option>
+                        <option>22 People</option>
+                        <option>23 People</option>
+                        <option>24 People</option>
+                        <option>25 People</option>
+                        <option>26 People</option>
+                        <option>27 People</option>
+                        <option>28 People</option>
+                        <option>29 People</option>
+                        <option>300 People</option>
                     </select>
                     </label>
                 </div>
@@ -520,7 +545,7 @@
                     <span>WRITE A MESSAGE</span>
                 </div>
                 <form id="form_container">
-                    <div class="form-container" >
+                    <div class="form-container">
                         <div class="input-field">
                             <label>
                                 <input type="text" name="firstname" placeholder="First Name" id="firstname">
@@ -557,17 +582,17 @@
                     <span class="tool">CONTACT DETAILS</span>
                 </div>
                 <div class="tools-container">
-                <span class="tool">ADDRESS</span>
-                <p class="tool-info">355 E 5TH ST, MANHATTAN, NY 10003</p>
-               </div>
+                    <span class="tool">ADDRESS</span>
+                    <p class="tool-info">355 E 5TH ST, MANHATTAN, NY 10003</p>
+                </div>
                 <div class="tools-container phone">
-                <span class="tool">PHONE</span>
-                <p class="tool-info">+1 939 777 55 33</p>
-            </div>
+                    <span class="tool">PHONE</span>
+                    <p class="tool-info">+1 939 777 55 33</p>
+                </div>
                 <div class="tools-container">
-                <span class="tool">EMAIL</span>
-                <p class="tool-info">RESERVATION@RENOME.COM</p>
-            </div>
+                    <span class="tool">EMAIL</span>
+                    <p class="tool-info">RESERVATION@RENOME.COM</p>
+                </div>
             </div>
         </div>
     </section>
@@ -617,15 +642,15 @@
             </div>
         </div>
         <div class="close-button">
-        <img src="pictures/close.svg" alt="">
-    </div>
+            <img src="pictures/close.svg" alt="">
+        </div>
     </div>
 
 </div>
-<script src="jquery-3.5.1.min.js">
-
-</script>
+<script src="jquery-3.5.1.min.js"></script>
 <script src="jquery.validate.min.js"></script>
+<script src="jquery-ui.min.js"></script>
+<script src="jquery.ptTimeSelect.js"></script>
 <script src="script.js">
 
 </script>
