added dropDawn menu

--- a/index.html
+++ b/index.html
@@ -157,10 +157,58 @@
         </div>
         <div class="menu-sections">
             <div class="menu-sections-content">
-                <p class="menu-sections-desc">BREAKFAST</p>
-                <p class="menu-sections-desc brown">LUNCH</p>
-                <p class="menu-sections-desc">DRINKS</p>
-                <p class="menu-sections-desc">DESSERTS</p>
+                <div>
+                    <p class="menu-sections-desc breakfast ">BREAKFAST</p>
+                    <ul class="menu-list breakfast-list">
+                        <li>BACON,EGG AND CHEESE SANDWICH</li>
+                        <li>EGGS BENEDICT,FRIED EGGS,OMELETTE ,POACHED EGG,BOILED EGG</li>
+                        <li>BREAKFAST SAUSAGE</li>
+                        <li>BUTTER,HONEY,CREAM CHEESE,JAM,YOGURT,NUTELLA,PEANUT BUTTER</li>
+                        <li>BISCUIT,CROISSANT,TOAST</li>
+                        <li>BREAKFAST CEREAL</li>
+                        <li>CORN FLAKES</li>
+                        <li>CHOCOLATE MILK, COFFEE AND OTHER COFFEE BEVERAGES, HOT CHOCOLATE, JUICE, MILK,TEA</li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="menu-sections-desc lunchOptions ">LUNCH</p>
+                    <ul class="menu-list lunch-list">
+                        <li>AVOCADO EGG SALAD SANDWICH</li>
+                        <li>LINGUINE WITH BACON, PEACHES AND GORGONZOLA</li>
+                        <li>BUFFALO CHICKEN WRAPS WITH BLUE CHEESE AND CELERY</li>
+                        <li>TOMATO SALAD WITH GRILLED HALLOUMI AND HERBS</li>
+                        <li>MEAL-PREP HONEY SESAME CHICKEN WITH BROCCOLI</li>
+                        <li>FIRECRACKER CHICKEN WITH RICE</li>
+                        <li>BACON-PASTA SALAD</li>
+                        <li>TUNA MANGO AVOCADO SALAD</li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="menu-sections-desc drinks">DRINKS</p>
+                    <ul class="menu-list drinks-list ">
+                        <li>WATER</li>
+                        <li>COFFEE</li>
+                        <li>LEMONADE</li>
+                        <li>ICED TEA</li>
+                        <li>MILKSHAKE</li>
+                        <li>SMOOTHIE</li>
+                        <li>BEER</li>
+                        <li>WINE</li>
+                    </ul>
+                </div>
+                <div>
+                    <p class="menu-sections-desc desserts ">DESSERTS</p>
+                    <ul class="menu-list desserts-list ">
+                        <li>Mint Oreo Cake</li>
+                        <li>Chocolate And Strawberry Cake</li>
+                        <li>Pavlova With Blueberry Jam</li>
+                        <li>Meyer Lemon Bars</li>
+                        <li> Brownie WITH ICE CREAM</li>
+                        <li>CHOCOLATE MOUSSE CHEESECAKE</li>
+                        <li>STRAWBERRY MOUSSE CAKE</li>
+                        <li>MATCHA CAKE</li>
+                    </ul>
+                </div>
             </div>
             <div class="line"></div>
 
@@ -454,38 +502,38 @@
                 </div>
                 <div class="reservation-people-number">
                     <label>
-                        <span class="people-number"><img src="pictures/people%20icon.png" alt=""></span> <select
-                            name="people">
-                        <option>2 People</option>
-                        <option>3 People</option>
-                        <option>4 People</option>
-                        <option>5 People</option>
-                        <option>6 People</option>
-                        <option>7 People</option>
-                        <option>8 People</option>
-                        <option>9 People</option>
-                        <option>10 People</option>
-                        <option>11 People</option>
-                        <option>12 People</option>
-                        <option>13 People</option>
-                        <option>14 People</option>
-                        <option>15 People</option>
-                        <option>16 People</option>
-                        <option>17 People</option>
-                        <option>18 People</option>
-                        <option>19 People</option>
-                        <option>20 People</option>
-                        <option>21 People</option>
-                        <option>22 People</option>
-                        <option>23 People</option>
-                        <option>24 People</option>
-                        <option>25 People</option>
-                        <option>26 People</option>
-                        <option>27 People</option>
-                        <option>28 People</option>
-                        <option>29 People</option>
-                        <option>300 People</option>
-                    </select>
+                        <span class="people-number"><img src="pictures/people%20icon.png" alt=""></span>
+                        <select name="people">
+                            <option>2 People</option>
+                            <option>3 People</option>
+                            <option>4 People</option>
+                            <option>5 People</option>
+                            <option>6 People</option>
+                            <option>7 People</option>
+                            <option>8 People</option>
+                            <option>9 People</option>
+                            <option>10 People</option>
+                            <option>11 People</option>
+                            <option>12 People</option>
+                            <option>13 People</option>
+                            <option>14 People</option>
+                            <option>15 People</option>
+                            <option>16 People</option>
+                            <option>17 People</option>
+                            <option>18 People</option>
+                            <option>19 People</option>
+                            <option>20 People</option>
+                            <option>21 People</option>
+                            <option>22 People</option>
+                            <option>23 People</option>
+                            <option>24 People</option>
+                            <option>25 People</option>
+                            <option>26 People</option>
+                            <option>27 People</option>
+                            <option>28 People</option>
+                            <option>29 People</option>
+                            <option>300 People</option>
+                        </select>
                     </label>
                 </div>
 
