--- a/index.html
+++ b/index.html
@@ -505,36 +505,7 @@
                 <div class="reservation-people-number">
                     <label>
                         <span class="people-number"><img src="pictures/people%20icon.png" alt=""></span>
-                        <select name="people">
-                            <option>2 People</option>
-                            <option>3 People</option>
-                            <option>4 People</option>
-                            <option>5 People</option>
-                            <option>6 People</option>
-                            <option>7 People</option>
-                            <option>8 People</option>
-                            <option>9 People</option>
-                            <option>10 People</option>
-                            <option>11 People</option>
-                            <option>12 People</option>
-                            <option>13 People</option>
-                            <option>14 People</option>
-                            <option>15 People</option>
-                            <option>16 People</option>
-                            <option>17 People</option>
-                            <option>18 People</option>
-                            <option>19 People</option>
-                            <option>20 People</option>
-                            <option>21 People</option>
-                            <option>22 People</option>
-                            <option>23 People</option>
-                            <option>24 People</option>
-                            <option>25 People</option>
-                            <option>26 People</option>
-                            <option>27 People</option>
-                            <option>28 People</option>
-                            <option>29 People</option>
-                            <option>30 People</option>
+                        <select name="people" class="people">
                         </select>
                     </label>
                 </div>
